se cambio un texto en nosotros y el tamaño del footer

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -90,13 +90,18 @@
         <p>En Clothing, nuestra historia es una odisea apasionante que se teje con hilos de creatividad,
           compromiso y amor por la moda hecha a mano. Nuestra marca nació de una profunda apreciación por la artesanía y
           el deseo de compartir esa pasión con el mundo.
+          <br>
           Desde nuestros humildes comienzos en 2020, hemos cultivado una filosofía que valora la
-          originalidad y la calidad. Creemos que la moda es mucho más que prendas; es una forma de expresión, una
-          narrativa de individualidad y un tributo a la habilidad artesanal. Cada prenda que creamos en Clothing es
+          originalidad y la calidad.
+          <br>
+          Creemos que la moda es mucho más que prendas; es una forma de expresión, una
+          narrativa de individualidad y un tributo a la habilidad artesanal.
+          <br> Cada prenda que creamos en Clothing es
           única, confeccionada con el máximo cuidado y atención al detalle.
           Colaboramos estrechamente con talentosos artesanos locales que comparten nuestra visión de celebrar la belleza
           de la simplicidad y la autenticidad. Nos enorgullece respaldar la tradición artesanal y, al mismo tiempo,
-          abrazar la innovación y la modernidad en nuestros diseños.</p>
+          abrazar la innovación y la modernidad en nuestros diseños.
+        </p>
       </div>
 
     </section>
@@ -107,9 +112,16 @@
         src="https://www.google.com/maps/embed?pb=!1m21!1m12!1m3!1d105088.56985000301!2d-58.46397155412265!3d-34.60371120277911!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m6!3e6!4m0!4m3!3m2!1d-34.603738899999996!2d-58.381570399999994!5e0!3m2!1sen!2sar!4v1695561607357!5m2!1sen!2sar"
         width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
         referrerpolicy="no-referrer-when-downgrade"></iframe>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem voluptatibus esse consequatur fuga! Corrupti,
-        doloribus quis rerum, error, assumenda quibusdam explicabo impedit inventore dignissimos provident nisi. Aliquam
-        magnam explicabo quae.</p>
+      <p>Todo comenzó en un pequeño taller en el corazón de Buenos Aires. En ese modesto espacio, nuestros fundadores,
+        dieron vida a su visión de fusionar la artesanía con la moda contemporánea. Con
+        dedicación y habilidad, comenzaron a diseñar y confeccionar prendas únicas que transmitían su amor por la
+        artesanía.
+        <br>
+        <br>
+        A lo largo de los años, hemos perfeccionado nuestras técnicas, trabajando en cada prenda con la misma pasión y
+        atención al detalle que nuestros fundadores inculcaron en nosotros. Cada pieza que creamos es única, hecha con
+        amor y cuidado, lo que la convierte en algo más que ropa; es una declaración de estilo y autenticidad.
+      </p>
 
     </section>
     <div class="div-nosotros">
