se hicieron cambios en los h1, se estilizo los forms, se aplico alt a las img y mas cambios chicos

--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -75,18 +75,18 @@
   <main class="catalogo">
 
 
-    <div class="catalogo-h2 second-bg-color main-shadow">
-      <h2>Conocé nuestra colección 2023</h2>
+    <div class="second-bg-color main-shadow">
+      <h1 class="h1-subpages">Conocé nuestra colección 2023</h1>
     </div>
 
     <section class="catalogo-lo-mas-vendido containerb t-align-center" id="catalogoropa">
-      <h3>Lo mas vendido 🔥</h3>
+      <h2>Lo mas vendido 🔥</h2>
       <div>
-        <a href=""><img src="../img/producto1.jpg" alt="producto 1 de lo mas vendido">
+        <a href=""><img src="../img/producto1.jpg" alt="conjunto chaqueta y pantalon para salir">
           <span class="cards-span">$7500</span></a>
-        <a href=""><img src="../img/producto2.jpg" alt="producto 2 de lo mas vendido">
+        <a href=""><img src="../img/producto2.jpg" alt="conjunto pulover y jeans">
           <span class="cards-span">$5500</span></a>
-        <a href=""><img src="../img/producto3.jpg" alt="producto 3 de lo mas vendido">
+        <a href=""><img src="../img/producto3.jpg" alt="conjunto pantalon marron claro y zapatos de taco">
           <span class="cards-span">$13000</span></a>
       </div>
     </section>
@@ -99,17 +99,17 @@
       <div class="catalogo-gorros-y-carteras" id="catalogosombrerosycarteras">
 
         <div class="catalogo-gorros-y-carteras-div"><a href=""><img src="../img/gorro1.jpg"
-              alt="producto 1 de gorros y carteras">
+              alt="sombrero amarillo con bordes rojos">
             <span class="cards-span">$3500</span></a>
-          <a href=""><img src="../img/gorro2.jpg" alt="producto 2 de gorros y carteras">
+          <a href=""><img src="../img/gorro2.jpg" alt="sombrero de mujer negro">
             <span class="cards-span">$4500</span></a>
-          <a href=""><img src="../img/gorro4.jpg" alt="producto 3 de gorros y carteras">
+          <a href=""><img src="../img/gorro4.jpg" alt="sombrero de mujer marron elegante">
             <span class="cards-span">$14500</span></a>
         </div>
         <div class="catalogo-gorros-y-carteras-div">
-          <a href=""><img src="../img/cartera3.jpg" alt="producto 4 de gorros y carteras">
+          <a href=""><img src="../img/cartera3.jpg" alt="carteras de distintos colores">
             <span class="cards-span">$9500</span></a>
-          <a href=""><img src="../img/maniqui.jpg" alt="producto 5 de gorros y carteras">
+          <a href=""><img src="../img/maniqui.jpg" alt="gorro pescador azul">
             <span class="cards-span">$5500</span></a>
         </div>
 
@@ -119,16 +119,18 @@
 
       <div class="catalogo-vestidos containerb">
 
-        <div class="catalogo-gorros-y-carteras-div"><a href=""><img src="../img/vestido1.jpg" alt="producto 1">
+        <div class="catalogo-gorros-y-carteras-div"><a href=""><img src="../img/vestido1.jpg"
+              alt="Vestido azul con diseño de mandala">
             <span class="cards-span">$17000</span></a>
-          <a href=""><img src="../img/vestido2.jpg" alt="producto 2">
+          <a href=""><img src="../img/vestido2.jpg" alt="Vestido negro con partes doradas verdes y rojas">
             <span class="cards-span">$25500</span></a>
-          <a href=""><img src="../img/vestido3.jpg" alt="producto 3">
+          <a href=""><img src="../img/vestido3.jpg" alt="Traje de mujer">
             <span class="cards-span">$18000</span></a>
         </div>
-        <div class="catalogo-gorros-y-carteras-div"><a href=""><img src="../img/woman5.jpg" alt="producto 4">
+        <div class="catalogo-gorros-y-carteras-div"><a href=""><img src="../img/woman5.jpg"
+              alt="Vestido amarillo elegante">
             <span class="cards-span">$22000</span></a>
-          <a href=""><img src="../img/woman6.jpg" alt="producto 5">
+          <a href=""><img src="../img/woman6.jpg" alt="Vestido blanco elegante">
             <span class="cards-span">$19500</span></a>
         </div>
 
