--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -75,20 +75,20 @@
   <main class="main-novedades">
 
     <section class="novedades1">
-      <h2 class="novedades1-h2">Novedades</h2>
+      <h1 class="novedades1-h1 h1-subpages">Novedades</h1>
       <p class="novedades1-undertitle">Lo que se viene</p>
     </section>
 
     <section class="lo-nuevo">
 
       <div class="lo-nuevo-col-v-2023">
-        <h3>Colección verano 2023</h3>
+        <h2>Colección verano 2023</h2>
         <a href=""><img src="../img/woman4.jpg" alt="Colección verano 2023" class="cards">
         </a><span>Telas de alta calidad y detalles únicos para que te sientas segura y elegante en cada ocasión.</span>
       </div>
 
       <div>
-        <h3>Colección 2024</h3>
+        <h2>Colección 2024</h2>
         <iframe width="645" height="400" src="https://www.youtube.com/embed/UTjHPiH3zbA?si=TRGQS4mKtHdXrNii"
           title="YouTube video player" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -120,7 +120,7 @@
           <span>acepto recibir noticias y ofertas por parte de Clothing</span>
           <div>
             <label for="checkbox2"></label>
-            <input type="checkbox" id="checkbox2">
+            <input required type="checkbox" id="checkbox2">
             <span>He leído y acepto los términos y condiciones y la política de privacidad</span>
           </div>
         </div>
