--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -75,31 +75,33 @@
   <main class="contacto">
 
     <div class="contacto-title">
-      <h2>Pongase en contacto con nosotros</h2>
+      <h1 class="h1-subpages">Pongase en contacto con nosotros</h1>
     </div>
 
     <section class="contacto-seccion-1 containerb">
 
-      <div class="contacto-formulario">
-        <h3>En que podemos ayudarle?</h3>
+      <div class="contacto-textform">
+        <h2>En que podemos ayudarle?</h2>
         <span>Envienos su consulta o pongase en contacto con nosotros</span>
         <div>
-          <form action="">
+          <form action="" class="contacto-form">
 
             <div>
               <label for="nombre"></label>
-              <input type="text" id="nombre" name="nombre" placeholder="Nombre">
+              <input type="text" id="nombre" name="nombre" placeholder="Nombre y apellido" required>
+              <span>Su nombre</span>
             </div>
             <div>
               <label for="email2"></label>
-              <input type="email" id="email2" name="email" placeholder="Email@email.com">
+              <input type="email" id="email2" name="email" placeholder="Email@email.com" required>
+              <span>Su email</span>
             </div>
             <div>
               <label for="mensaje"></label>
               <textarea name="mensaje" id="mensaje" cols="35" rows="7" placeholder="Mensaje" required></textarea>
             </div>
             <div>
-              <input type="submit" name="submit" id="enviar" value="Enviar">
+              <input type="submit" name="submit" id="enviar" value="Enviar" class="contacto-form-button">
             </div>
 
           </form>
