--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -75,7 +75,7 @@
   <main class="main-nosotros">
 
     <div class="nosotros-title">
-      <h2>Quienes somos</h2>
+      <h1 class="h1-subpages">Quienes somos</h1>
     </div>
 
     <section class="ropa-a-mano containerb">
@@ -86,7 +86,7 @@
       </div>
 
       <div class="ropa-a-mano-text">
-        <h3>Artesanía en cada puntada</h3>
+        <h2>Artesanía en cada puntada</h2>
         <p>En Clothing, nuestra historia es una odisea apasionante que se teje con hilos de creatividad,
           compromiso y amor por la moda hecha a mano. Nuestra marca nació de una profunda apreciación por la artesanía y
           el deseo de compartir esa pasión con el mundo.
@@ -107,7 +107,7 @@
     </section>
 
     <section class="como-empezo containerb main-shadow">
-      <h3>Donde empezó todo</h3>
+      <h2>Donde empezó todo</h2>
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m21!1m12!1m3!1d105088.56985000301!2d-58.46397155412265!3d-34.60371120277911!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m6!3e6!4m0!4m3!3m2!1d-34.603738899999996!2d-58.381570399999994!5e0!3m2!1sen!2sar!4v1695561607357!5m2!1sen!2sar"
         width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
@@ -132,7 +132,7 @@
 
       <div class="descubrir-mas-nosotros containerb">
 
-        <div class="persona1-div">
+        <div>
           <h4>Elena Martínez - La visionaria de la artesanía</h4>
           <img src="../img/woman6.jpg" alt="persona1" class="cards">
           <span>Elena Martínez es la mente visionaria detrás de nuestra marca. Con una pasión innata por la moda y un
