se corrigio un error de ortografia en novedades y unos margins de contacto

--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -117,7 +117,7 @@
 
           <label for="checkbox1"></label>
           <input type="checkbox" id="checkbox1">
-          <span>acepto recibir noticias y ofertas por parte de Clothing</span>
+          <span>Acepto recibir noticias y ofertas por parte de Clothing</span>
           <div>
             <label for="checkbox2"></label>
             <input required type="checkbox" id="checkbox2">
